--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -19,19 +19,19 @@
           <input type="text" name="system.unskilled" value="{{system.unskilled}}" data-dtype="Number"/>
         </div>
         <div class="resource-content class-weapons flexrow">
-          <label for="system.proficiencies" class="combat-label">{{localize "HYP3E.wpnSkills"}}:</label>
+          <label for="system.proficiencies" class="combat-label">{{localize "HYP3E.wpnSkills"}}</label>
           <input type="text" name="system.proficiencies.class" value="{{system.proficiencies.class}}"/>
         </div>
         <div class="resource-content weapon-field flexrow">
-          <label for="system.proficiencies" class="combat-label">{{localize "HYP3E.level4"}}:</label>
+          <label for="system.proficiencies" class="combat-label">{{localize "HYP3E.level4"}}</label>
           <input type="text" name="system.proficiencies.lvl4" value="{{system.proficiencies.lvl4}}"/>
         </div>
         <div class="resource-content weapon-field flexrow">
-          <label for="system.proficiencies" class="combat-label">{{localize "HYP3E.level8"}}:</label>
+          <label for="system.proficiencies" class="combat-label">{{localize "HYP3E.level8"}}</label>
           <input type="text" name="system.proficiencies.lvl8" value="{{system.proficiencies.lvl8}}"/>
         </div>
         <div class="resource-content weapon-field flexrow">
-          <label for="system.proficiencies" class="combat-label">{{localize "HYP3E.level12"}}:</label>
+          <label for="system.proficiencies" class="combat-label">{{localize "HYP3E.level12"}}</label>
           <input type="text" name="system.proficiencies.lvl12" value="{{system.proficiencies.lvl12}}"/>
         </div>
         {{!-- <div class="resource-content flexrow flex-group-center">
@@ -85,6 +85,7 @@
     <div class="saves-block flexrow flex-between">
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.death.value}}" data-label="{{localize 'HYP3E.dataLabel.deathSave'}}">
+          {{!-- <img src="systems/hyp3e/assets/crossing_bones_skull.jpg" width="50"> --}}
           <label for="system.saves.death.value" class="combat-label">{{localize "HYP3E.saves.death.abbrev"}}</label>
           <i class="fas fa-dice-d20"></i>
           </span>
