--- a/css/hyp3e.css
+++ b/css/hyp3e.css
@@ -395,7 +395,7 @@ textarea {
 
 /* Character Abilities-tab styles */
 .hyp3e .attribute-block {
-  min-width: 500px;
+  min-width: 510px;
 }
 .hyp3e .attribute-row {
   padding-bottom: 5px;
@@ -403,6 +403,7 @@ textarea {
 }
 .hyp3e .attribute-label {
   font-family: "Herculanum", sans-serif;
+  font-size: large;
   font-weight: bold;
   padding: 5px 5px;
 }
@@ -446,7 +447,7 @@ textarea {
 .hyp3e .combat-block input {
   text-align: center;
   min-width: 20px;
-  max-width: 80px;
+  max-width: 50px;
   margin-bottom: 2px;
 }
 /* .hyp3e .combat-block .class-weapons {
@@ -487,22 +488,22 @@ textarea {
 
 /* Character Spells-tab styles */
 .hyp3e .spells-block {
-  padding: 0 2px;
+  padding: 0 5px;
   margin-right: 5px;
   /* background-color: aqua; */
 }
 .hyp3e .casting-ability {
-  max-width: 200px;
+  min-width: 190px;
 }
 .hyp3e .spells-label {
   font-family: "Herculanum", sans-serif;
   font-weight: bold;
-  padding: 5px 10px;
+  padding: 5px 5px;
   /* background-color: darkcyan; */
 }
 .hyp3e .spells input {
   text-align: center;
-  max-width: 50px;
+  max-width: 40px;
   margin-bottom: 2px;
 }
 
