--- a/templates/actor/parts/npc-all-items.hbs
+++ b/templates/actor/parts/npc-all-items.hbs
@@ -165,11 +165,11 @@
         <div class="item-header flexrow">
           <div class="item-name">
             <div class="item-image">
-              {{#if item.system.formula}}
+              {{!-- {{#if item.system.formula}} --}}
               <a class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
-              {{else}}
+              {{!-- {{else}}
               <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
-              {{/if}}
+              {{/if}} --}}
             </div>
             <a><h4 class="item-drop">{{item.name}}</h4></a>
           </div>
