--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -24,7 +24,9 @@
             <div class="item-name">
               <div class="item-image">
                 {{#if container.system.formula}}
-                <a class="rollable" data-roll-type="item" data-label="{{container.name}} {{localize 'HYP3E.dataLabel.check'}}"><img src="{{container.img}}" title="{{container.name}}" width="24" height="24"/></a>
+                <a class="rollable" data-roll-type="item" data-label="{{container.name}} {{localize 'HYP3E.dataLabel.check'}}">
+                  <img src="{{container.img}}" title="{{container.name}}" width="24" height="24"/>
+                </a>
                 {{else}}
                 <img src="{{container.img}}" title="{{container.name}}" width="24" height="24"/>
                 {{/if}}
@@ -56,7 +58,9 @@
               <div class="item-name contained-items">
                 <div class="item-image">
                   {{#if item.system.formula}}
-                  <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+                  <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}">
+                    <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                  </a>
                   {{else}}
                   <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
                   {{/if}}
@@ -96,7 +100,9 @@
             <div class="item-name">
               <div class="item-image">
                 {{#if item.system.formula}}
-                <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+                <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}">
+                  <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                </a>
                 {{else}}
                 <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
                 {{/if}}
