--- a/templates/actor/parts/npc-all-items.hbs
+++ b/templates/actor/parts/npc-all-items.hbs
@@ -17,7 +17,9 @@
         <div class="item-name">
           <div class="item-image">
             {{#if item.system.formula}}
-            <a class="rollable" data-roll-type="item" data-label="{{item.name}} check"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            <a class="rollable" data-roll-type="item" data-label="{{item.name}} check">
+              <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+            </a>
             {{else}}
             <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
             {{/if}}
@@ -58,7 +60,9 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            <a class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            <a class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}">
+              <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+            </a>
           </div>
           <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
@@ -177,7 +181,9 @@
           <div class="item-name">
             <div class="item-image">
               {{!-- {{#if item.system.formula}} --}}
-              <a class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+              <a class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}">
+                <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+              </a>
               {{!-- {{else}}
               <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
               {{/if}} --}}
