--- a/templates/actor/parts/actor-abilities.hbs
+++ b/templates/actor/parts/actor-abilities.hbs
@@ -62,7 +62,9 @@
             <div class="item-name">
               <div class="item-image">
                 {{#if item.system.formula}}
-                <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+                <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}">
+                  <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                </a>
                 {{else}}
                 <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
                 {{/if}}
