--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -141,7 +141,9 @@
           <div class="item-header flexrow">
             <div class="item-name">
               <div class="item-image">
-                <a class="rollable" data-roll-type="item" data-label="{{localize 'HYP3E.dataLabel.attackWith'}} {{item.name}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+                <a class="rollable" data-roll-type="item" data-label="{{localize 'HYP3E.dataLabel.attackWith'}} {{item.name}}">
+                  <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                </a>
               </div>
               <a><h4 class="item-drop">{{item.name}}</h4></a>
             </div>
