--- a/templates/actor/parts/actor-spells.hbs
+++ b/templates/actor/parts/actor-spells.hbs
@@ -66,7 +66,9 @@
               <div class="item-name">
                 <div class="item-image">
                   {{!-- {{#if item.system.atkRoll}} --}}
-                  <a class="rollable" data-roll-type="item" data-label="{{localize 'HYP3E.dataLabel.castSpell'}} {{item.name}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+                  <a class="rollable" data-roll-type="item" data-label="{{localize 'HYP3E.dataLabel.castSpell'}} {{item.name}}">
+                    <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                  </a>
                   {{!-- {{else}}
                   <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
                   {{/if}} --}}
