--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -93,7 +93,7 @@
         <div class="flexrow flexshrink flex-group-left item-attributes">
           <label class="resource-label">{{localize 'HYP3E.item.ammunition'}}</label>
           <input name="system.isAmmunition" type="checkbox" {{checked system.isAmmunition}}>
-          <div class="flex-xlarge">The Ammunication tag causes this item to display on the Combat tab.</div>
+          <div class="flex-xlarge">The Ammunition tag causes this item to display on the Combat tab.</div>
         </div>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
