--- a/templates/item/item-weapon-sheet.hbs
+++ b/templates/item/item-weapon-sheet.hbs
@@ -42,14 +42,9 @@
           <label class="resource-label">{{localize 'HYP3E.headers.atkRate'}}</label>
           <input type="text" name="system.rof" value="{{system.rof}}" data-dtype="String" />
           <label class="resource-label">{{localize 'HYP3E.weapon.atkType'}}</label>
-          <div class="form-fields">
-            <select name="system.type">
-              {{#select system.type}}
-              {{#each system.types as |type t|}}
-              <option value="{{type}}">{{type}}</option>
-              {{/each}}
-              {{/select}}
-            </select>
+          <div class="flexrow">
+            <a class="weapon-type {{#unless system.melee}}no-bonus{{/unless}}" data-attack-type="melee" title='{{localize "HYP3E.weapon.type.melee"}}'><i class="fas fa-sword"></i></a>
+            <a class="weapon-type {{#unless system.missile}}no-bonus{{/unless}}" data-attack-type="missile" title='{{localize "HYP3E.weapon.type.missile"}}'><i class="fas fa-bow-arrow"></i></a>
           </div>
           {{#if system.melee}}
           <label class="resource-label">{{localize 'HYP3E.headers.wpnClass'}}</label>
@@ -69,6 +64,11 @@
           <input type="text" name="system.dmgMod" value="{{numberFormat system.dmgMod decimals=0 sign=true}}" data-dtype="Number" />
           <label for="system.damage" class="resource-label">{{localize 'HYP3E.headers.damage'}}</label>
           <input type="text" name="system.damage" value="{{system.damage}}" data-dtype="String" />
+          <label for="weaponMastery" class="resource-label">{{localize 'HYP3E.headers.weaponMastery'}}</label>
+          <div class="flexrow">
+            <a class="weapon-mastery {{#unless system.wpnMaster}}no-bonus{{/unless}}" data-mastery="master" title='{{localize "HYP3E.weapon.master"}}'><i class="fas fa-sword"></i></a>
+            <a class="weapon-mastery {{#unless system.wpnGrandmaster}}no-bonus{{/unless}}" data-mastery="grandMaster" title='{{localize "HYP3E.weapon.grandMaster"}}'><i class="fas fa-swords"></i></a>
+          </div>
         </div>
 
         {{!-- Description --}}
