Bug fix for weight carried display.

--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -148,7 +148,7 @@
     </div>
     <div class="money-block flexrow">
       <div class="money-block flex-group-center">
-        <label for="system.encumbrance" class="exploration-label">Total Weight Carried:</label>
+        <label for="system.encumbrance" class="exploration-label">Total Carried:</label><br />
         {{encumbrance}} pounds
       </div>
       <div class="money-block flex-group-center">
