bug fix for spells # memorized not displaying correctly

--- a/templates/item/item-spell-sheet.hbs
+++ b/templates/item/item-spell-sheet.hbs
@@ -12,7 +12,7 @@
           <label class="resource-label">{{localize 'HYP3E.details.level'}}</label>
           <input type="text" name="system.spellLevel" value="{{system.spellLevel}}" />
           <label class="resource-label">{{localize 'HYP3E.spell.numMem'}}</label>
-          <input type="text" name="system.quantity.value" value="{{system.quantity.value}}" />
+          <input type="text" name="system.quantity.value" value="{{system.quantity.value}}" data-dtype="Number"/>
         </div>
       </div>
     </div>
