--- a/templates/dialog/roll-dialog.hbs
+++ b/templates/dialog/roll-dialog.hbs
@@ -17,11 +17,7 @@
       <div class="flexrow form-group">
         <label class="dialog-label">{{localize "HYP3E.rollMode"}}</label>
         <select name="rollMode">
-          {{#select rollMode}}
-          {{#each rollModes as |label mode|}}
-          <option value="{{mode}}">{{localize label}}</option>
-          {{/each}}
-          {{/select}}
+          {{selectOptions rollModes selected=rollMode localize=true}}
         </select>
       </div>
     {{!-- {{/if}} --}}
