--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -12,7 +12,7 @@
           <div class="flexrow flex-group-center">
             <label class="header-label align-left">{{localize "HYP3E.details.class"}}</label>
             <select name="system.details.class">
-              {{!-- <option value=""></option> --}}
+              <option value=""></option>
               {{selectOptions characterClasses selected=system.details.class localize=false}}
             </select>
             <span></span>
