--- a/templates/item/item-spell-sheet.hbs
+++ b/templates/item/item-spell-sheet.hbs
@@ -42,12 +42,13 @@
           <label class="resource-label">{{localize 'HYP3E.spell.save'}}</label>
           <div class="form-fields">
             <select name="system.save">
-              {{#select system.save}}
+              {{!-- {{#select system.save}} --}}
               <option value=""></option>
-              {{#each system.saves as |save t|}}
+              {{selectOptions saveThrows selected=system.save localize=true}}
+              {{!-- {{#each system.saves as |save t|}}
               <option value="{{save}}">{{save}}</option>
               {{/each}}
-              {{/select}}
+              {{/select}} --}}
             </select>
           </div>
           <label class="resource-label">{{localize 'HYP3E.attackRoll'}}</label>
